// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ship description Github MD 1`] = `
"- #18 @DiesIrae
- #19 @DiesIrae

Lone commits:
- [6f890b6](https://github.com/matchawine/sub-pull-requests-summary-action/commit/6f890b6e570c66d8cb28c261528e7e06370f6260) Lone commit 1 @DiesIrae
- [6542788](https://github.com/matchawine/sub-pull-requests-summary-action/commit/6542788e8f830800a21e7a8a865f3f6ef0dbc2ea) Lone commits @DiesIrae"
`;

exports[`Ship description Output MD 1`] = `
"- [#18 Sub PR 1](https://github.com/matchawine/sub-pull-requests-summary-action/pull/18) @DiesIrae
- [#19 Sub PR 2](https://github.com/matchawine/sub-pull-requests-summary-action/pull/19) @DiesIrae"
`;

exports[`Ship description Response 1`] = `
Object {
  "node": Object {
    "commits": Object {
      "nodes": Array [
        Object {
          "commit": Object {
            "abbreviatedOid": "805ed82",
            "associatedPullRequests": Object {
              "nodes": Array [
                Object {
                  "assignees": Object {
                    "nodes": Array [],
                  },
                  "author": Object {
                    "login": "DiesIrae",
                  },
                  "baseRefName": "target-branch",
                  "id": "PR_kwDOGzILZc4zL_V6",
                  "number": 20,
                  "state": "OPEN",
                  "title": "Test Parent PR",
                  "url": "https://github.com/matchawine/sub-pull-requests-summary-action/pull/20",
                },
                Object {
                  "assignees": Object {
                    "nodes": Array [],
                  },
                  "author": Object {
                    "login": "DiesIrae",
                  },
                  "baseRefName": "parent-pr-branch",
                  "id": "PR_kwDOGzILZc4zL_MY",
                  "number": 18,
                  "state": "MERGED",
                  "title": "Sub PR 1",
                  "url": "https://github.com/matchawine/sub-pull-requests-summary-action/pull/18",
                },
              ],
            },
            "author": Object {
              "user": Object {
                "login": "DiesIrae",
              },
            },
            "id": "C_kwDOGzILZdoAKDgwNWVkODIzMGRhNzhkNjc2ZWQ5NTEyNTAzNTZkZjFhNjU2NjM1ODQ",
            "message": "Sub PR 1 commit",
            "url": "https://github.com/matchawine/sub-pull-requests-summary-action/commit/805ed8230da78d676ed951250356df1a65663584",
          },
        },
        Object {
          "commit": Object {
            "abbreviatedOid": "05d8493",
            "associatedPullRequests": Object {
              "nodes": Array [
                Object {
                  "assignees": Object {
                    "nodes": Array [],
                  },
                  "author": Object {
                    "login": "DiesIrae",
                  },
                  "baseRefName": "target-branch",
                  "id": "PR_kwDOGzILZc4zL_V6",
                  "number": 20,
                  "state": "OPEN",
                  "title": "Test Parent PR",
                  "url": "https://github.com/matchawine/sub-pull-requests-summary-action/pull/20",
                },
                Object {
                  "assignees": Object {
                    "nodes": Array [],
                  },
                  "author": Object {
                    "login": "DiesIrae",
                  },
                  "baseRefName": "parent-pr-branch",
                  "id": "PR_kwDOGzILZc4zL_MY",
                  "number": 18,
                  "state": "MERGED",
                  "title": "Sub PR 1",
                  "url": "https://github.com/matchawine/sub-pull-requests-summary-action/pull/18",
                },
              ],
            },
            "author": Object {
              "user": Object {
                "login": "DiesIrae",
              },
            },
            "id": "C_kwDOGzILZdoAKDA1ZDg0OTNkNWY4YzA0YzVjYThlZjM0NGQ4N2M0ZjgwMTgzYWQ5Y2I",
            "message": "Merge pull request #18 from matchawine/sub-pr1-branch",
            "url": "https://github.com/matchawine/sub-pull-requests-summary-action/commit/05d8493d5f8c04c5ca8ef344d87c4f80183ad9cb",
          },
        },
        Object {
          "commit": Object {
            "abbreviatedOid": "b4cd0f5",
            "associatedPullRequests": Object {
              "nodes": Array [
                Object {
                  "assignees": Object {
                    "nodes": Array [],
                  },
                  "author": Object {
                    "login": "DiesIrae",
                  },
                  "baseRefName": "target-branch",
                  "id": "PR_kwDOGzILZc4zL_V6",
                  "number": 20,
                  "state": "OPEN",
                  "title": "Test Parent PR",
                  "url": "https://github.com/matchawine/sub-pull-requests-summary-action/pull/20",
                },
                Object {
                  "assignees": Object {
                    "nodes": Array [],
                  },
                  "author": Object {
                    "login": "DiesIrae",
                  },
                  "baseRefName": "parent-pr-branch",
                  "id": "PR_kwDOGzILZc4zL_SN",
                  "number": 19,
                  "state": "MERGED",
                  "title": "Sub PR 2",
                  "url": "https://github.com/matchawine/sub-pull-requests-summary-action/pull/19",
                },
              ],
            },
            "author": Object {
              "user": Object {
                "login": "DiesIrae",
              },
            },
            "id": "C_kwDOGzILZdoAKGI0Y2QwZjVkOWQyMTcxOGE4YThlZjM3Nzg0ZjM4NzZkZGM4MWI5MDY",
            "message": "Sub PR 2 commit",
            "url": "https://github.com/matchawine/sub-pull-requests-summary-action/commit/b4cd0f5d9d21718a8a8ef37784f3876ddc81b906",
          },
        },
        Object {
          "commit": Object {
            "abbreviatedOid": "43d39b4",
            "associatedPullRequests": Object {
              "nodes": Array [
                Object {
                  "assignees": Object {
                    "nodes": Array [],
                  },
                  "author": Object {
                    "login": "DiesIrae",
                  },
                  "baseRefName": "target-branch",
                  "id": "PR_kwDOGzILZc4zL_V6",
                  "number": 20,
                  "state": "OPEN",
                  "title": "Test Parent PR",
                  "url": "https://github.com/matchawine/sub-pull-requests-summary-action/pull/20",
                },
                Object {
                  "assignees": Object {
                    "nodes": Array [],
                  },
                  "author": Object {
                    "login": "DiesIrae",
                  },
                  "baseRefName": "parent-pr-branch",
                  "id": "PR_kwDOGzILZc4zL_SN",
                  "number": 19,
                  "state": "MERGED",
                  "title": "Sub PR 2",
                  "url": "https://github.com/matchawine/sub-pull-requests-summary-action/pull/19",
                },
              ],
            },
            "author": Object {
              "user": Object {
                "login": "DiesIrae",
              },
            },
            "id": "C_kwDOGzILZdoAKDQzZDM5YjQzOGJhNjlmOGY0ZTM4NTg4YzZhMGY1NjdlMjVjYmE2MDA",
            "message": "Merge pull request #19 from matchawine/sub-pr2-branch",
            "url": "https://github.com/matchawine/sub-pull-requests-summary-action/commit/43d39b438ba69f8f4e38588c6a0f567e25cba600",
          },
        },
        Object {
          "commit": Object {
            "abbreviatedOid": "6f890b6",
            "associatedPullRequests": Object {
              "nodes": Array [
                Object {
                  "assignees": Object {
                    "nodes": Array [],
                  },
                  "author": Object {
                    "login": "DiesIrae",
                  },
                  "baseRefName": "target-branch",
                  "id": "PR_kwDOGzILZc4zL_V6",
                  "number": 20,
                  "state": "OPEN",
                  "title": "Test Parent PR",
                  "url": "https://github.com/matchawine/sub-pull-requests-summary-action/pull/20",
                },
              ],
            },
            "author": Object {
              "user": Object {
                "login": "DiesIrae",
              },
            },
            "id": "C_kwDOGzILZdoAKDZmODkwYjZlNTcwYzY2ZDhjYjI4YzI2MTUyOGU3ZTA2MzcwZjYyNjA",
            "message": "Lone commit 1",
            "url": "https://github.com/matchawine/sub-pull-requests-summary-action/commit/6f890b6e570c66d8cb28c261528e7e06370f6260",
          },
        },
        Object {
          "commit": Object {
            "abbreviatedOid": "6542788",
            "associatedPullRequests": Object {
              "nodes": Array [
                Object {
                  "assignees": Object {
                    "nodes": Array [],
                  },
                  "author": Object {
                    "login": "DiesIrae",
                  },
                  "baseRefName": "target-branch",
                  "id": "PR_kwDOGzILZc4zL_V6",
                  "number": 20,
                  "state": "OPEN",
                  "title": "Test Parent PR",
                  "url": "https://github.com/matchawine/sub-pull-requests-summary-action/pull/20",
                },
              ],
            },
            "author": Object {
              "user": Object {
                "login": "DiesIrae",
              },
            },
            "id": "C_kwDOGzILZdoAKDY1NDI3ODhlOGY4MzA4MDBhMjFlN2E4YTg2NWYzZjZlZjBkYmMyZWE",
            "message": "Lone commits",
            "url": "https://github.com/matchawine/sub-pull-requests-summary-action/commit/6542788e8f830800a21e7a8a865f3f6ef0dbc2ea",
          },
        },
      ],
    },
    "id": "PR_kwDOGzILZc4zL_V6",
    "title": "Test Parent PR",
  },
}
`;

exports[`Ship description Transform 1`] = `
Object {
  "associatedPullRequests": Array [
    Object {
      "assignees": Object {
        "nodes": Array [],
      },
      "author": Object {
        "login": "DiesIrae",
      },
      "baseRefName": "parent-pr-branch",
      "id": "PR_kwDOGzILZc4zL_MY",
      "number": 18,
      "state": "MERGED",
      "title": "Sub PR 1",
      "url": "https://github.com/matchawine/sub-pull-requests-summary-action/pull/18",
    },
    Object {
      "assignees": Object {
        "nodes": Array [],
      },
      "author": Object {
        "login": "DiesIrae",
      },
      "baseRefName": "parent-pr-branch",
      "id": "PR_kwDOGzILZc4zL_SN",
      "number": 19,
      "state": "MERGED",
      "title": "Sub PR 2",
      "url": "https://github.com/matchawine/sub-pull-requests-summary-action/pull/19",
    },
  ],
  "loneCommits": Array [
    Object {
      "abbreviatedOid": "6f890b6",
      "associatedPullRequests": Object {
        "nodes": Array [
          Object {
            "assignees": Object {
              "nodes": Array [],
            },
            "author": Object {
              "login": "DiesIrae",
            },
            "baseRefName": "target-branch",
            "id": "PR_kwDOGzILZc4zL_V6",
            "number": 20,
            "state": "OPEN",
            "title": "Test Parent PR",
            "url": "https://github.com/matchawine/sub-pull-requests-summary-action/pull/20",
          },
        ],
      },
      "author": Object {
        "user": Object {
          "login": "DiesIrae",
        },
      },
      "id": "C_kwDOGzILZdoAKDZmODkwYjZlNTcwYzY2ZDhjYjI4YzI2MTUyOGU3ZTA2MzcwZjYyNjA",
      "message": "Lone commit 1",
      "url": "https://github.com/matchawine/sub-pull-requests-summary-action/commit/6f890b6e570c66d8cb28c261528e7e06370f6260",
    },
    Object {
      "abbreviatedOid": "6542788",
      "associatedPullRequests": Object {
        "nodes": Array [
          Object {
            "assignees": Object {
              "nodes": Array [],
            },
            "author": Object {
              "login": "DiesIrae",
            },
            "baseRefName": "target-branch",
            "id": "PR_kwDOGzILZc4zL_V6",
            "number": 20,
            "state": "OPEN",
            "title": "Test Parent PR",
            "url": "https://github.com/matchawine/sub-pull-requests-summary-action/pull/20",
          },
        ],
      },
      "author": Object {
        "user": Object {
          "login": "DiesIrae",
        },
      },
      "id": "C_kwDOGzILZdoAKDY1NDI3ODhlOGY4MzA4MDBhMjFlN2E4YTg2NWYzZjZlZjBkYmMyZWE",
      "message": "Lone commits",
      "url": "https://github.com/matchawine/sub-pull-requests-summary-action/commit/6542788e8f830800a21e7a8a865f3f6ef0dbc2ea",
    },
  ],
}
`;
